[ADD] Edit and delete functionalities for services