@@ -2,6 +2,7 @@ package org.example.eventy.solutions.dtos.services;
 
 import org.example.eventy.common.models.PicturePath;
 import org.example.eventy.common.models.ReservationConfirmationType;
+import org.example.eventy.common.services.PictureService;
 import org.example.eventy.events.dtos.EventTypeDTO;
 import org.example.eventy.solutions.dtos.CategoryDTO;
 import org.example.eventy.solutions.dtos.categories.CategoryWithIDDTO;
@@ -39,13 +40,11 @@ public class UpdatedServiceDTO {
         this.description = service.getDescription();
         this.price = service.getPrice();
         this.discount = service.getDiscount();
-        this.imageUrls = service.getImageUrls().stream().map(PicturePath::getPath).collect(Collectors.toList());
+        this.imageUrls = service.getImageUrls().stream().map(PicturePath::getPath).map(PictureService::getImage).collect(Collectors.toList());
         this.isVisible = service.isVisible();
         this.isAvailable = service.isAvailable();
         this.category = new CategoryDTO(service.getCategory());
-        this.relatedEventTypes = new ArrayList<>();
-        // this may be too complicated, maybe there is an easier way
-        service.getEventTypes().forEach(et -> this.relatedEventTypes.add(new EventTypeDTO(et.getId(), et.getName(), et.getDescription(), et.getRecommendedSolutionCategories().stream().map(CategoryWithIDDTO::new).toList())));
+        this.relatedEventTypes = service.getEventTypes().stream().map(EventTypeDTO::new).collect(Collectors.toList());
         this.specifics = service.getSpecifics();
         this.minReservationTime = service.getMinReservationTime();
         this.maxReservationTime = service.getMaxReservationTime();
